# safety-va-rl

./: .gitignore  README.md  play_with_human.py  pyproject.toml
cluster/: evaluation_script.sh  jobscript_omnisafe.sh  jobscript_sb3.sh  run_play_with_human.sh  save_video_sb3.sh  sweep.sh
experiments/ppo/SafetyPointGoal1-v0/n_timesteps_1200000/final_eval/: summary.json
experiments/ppo/SafetyPointGoal1-v0/n_timesteps_1500000/final_eval/: summary.json
experiments/ppo/SafetyPointGoal1-v0/n_timesteps_3600000/final_eval/: summary.json
experiments/ppo/SafetyPointGoal2-v0/n_timesteps_2500000/final_eval/: summary.json
experiments/sweeps/ppo/SafetyPointGoal1-v0/: ppo_goal1_sweep_10k_summary.json
experiments/sweeps/sac/SafetyPointGoal1-v0/: sac_goal1_sweep_100k_summary.json  sac_goal1_sweep_10k_summary.json
experiments/sweeps/sac/SafetyPointGoal2-v0/: sac_goal2_sweep_100k_summary.json
scripts/: evaluate.py  save_sb3_video.py  sweep.py  train.py
src/evaluation/final_eval/: omnisafe_eval.py  sb3_eval.py
src/evaluation/training_metrics/: omnisafe_metrics.py  sb3_metrics.py
src/evaluation/video/: omnisafe_video.py  sb3_video.py
src/experiments/: definitions.py  registry.py  sweep_definitions.py
src/sweeps/sb3/: ppo_sweep.py  sac_sweep.py  sweep_runner.py
src/trainers/omnisafe/: compat.py  ppolag.py  trainer.py
src/trainers/sb3/: callbacks.py  ppo.py  sac.py  trainer.py
src/wrappers/: FastSafeRewardWrapper.py  GymCompatibilityWrapper.py
sweeps/: sac_goal1_sweep_10k_summary.json
(+12 files in other folders)
