[project]
name = "safety_va-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.9.1+cu126",
    "omnisafe",
    "safety-gymnasium",
    "stable-baselines3>=2.3.2",
    "optuna>=3.5.0",
]

[tool.uv.sources]
safety-gymnasium = { url = "https://github.com/PKU-Alignment/safety-gymnasium/archive/refs/tags/v1.2.0.zip" }
omnisafe = { url = "https://github.com/PKU-Alignment/omnisafe/archive/refs/tags/v0.5.0.zip" }
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
